CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

SET( BTC_LIB_NAME  libbtc )
PROJECT( ${BTC_LIB_NAME} )

add_definitions(-DUSE_NUM_GMP)
add_definitions(-DUSE_FIELD_10X26)
add_definitions(-DUSE_FIELD_INV_BUILTIN)
add_definitions(-DUSE_SCALAR_8X32)
add_definitions(-DUSE_SCALAR_INV_BUILTIN)

FILE(GLOB SOURCES src/*.c)
list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/net.c)

FILE(GLOB HEADERS include/btc/*.h)
list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/btc/net.h)

FILE(GLOB LOGDB src/logdb/*.c)

FILE(GLOB SECP256K1 src/secp256k1/src/*.c)
list(REMOVE_ITEM SECP256K1 ${CMAKE_CURRENT_SOURCE_DIR}/src/secp256k1/src/tests.c)

INCLUDE_DIRECTORIES( include )
INCLUDE_DIRECTORIES( src/logdb/include )
INCLUDE_DIRECTORIES( src/secp256k1 )
INCLUDE_DIRECTORIES( ../libgmp )

ADD_LIBRARY( ${BTC_LIB_NAME} ${SOURCES} ${LOGDB} ${SECP256K1} ${HEADERS})
TARGET_LINK_LIBRARIES(${BTC_LIB_NAME})
